# AUM

./: .gitignore  CMakeLists.txt  Caddyfile  Dockerfile  Phoenix  bidang_masalah.csv  docker-compose.yml  exit  main.cpp  nul  path.txt  soal_masalah_clean.csv  ssl.pem
Production-Test/: Phoenix
Production-Test/config/: server.wpc
Production-Test/core/: starter.cpp
Production-Test/public/: syntax.list
Production-Test/public/views/: AUM.htpp
Production-Test/routes/: register.cpp
act/: auth.cpp  auth.hpp  connector.hpp
config/: server.wpc
core/: starter.cpp
data/: soal_masalah.csv
pages/: admin.cpp  bk.cpp  handler.cpp  handler.hpp  pyro.hpp  pyro.hpp.new  siswa.cpp
public/: admin.htpp  bk.css  layout.html  login.htpp  script.js  style.css  syntax.list
public/admin/: admin.htpp  kategori.htpp  script-admin.js  style-admin.css  user.htpp
public/bk/: hasil.htpp  hasilkelas.htpp  kategori.htpp  user.htpp
public/views/: AUM.htpp  dashboard.htpp  login.htpp  scripts-siswa.js  siswa.css
routes/: CMakeLists.txt  register.cpp
